--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   margin: 28px auto 64px;
-  max-width: calc(100% - 48*2);
+  max-width: calc(100% - 96px);
   display: flex;
   align-items: flex-start;
   justify-content: start;
