--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -12,7 +12,7 @@
   text-decoration: none;
 }
  .cover__overlay::before {
-  background-color: #2a2c2f;
+  background-color: #2A2C2F;
   content: '';
   display: block;
   width: 100%;
@@ -24,6 +24,15 @@
   transition: .3s ease-in-out;
  }
 
-
-
-
+ .cover__overlay:hover::before {
+ background-color: #2A2C2F;
+ content: '';
+ display: block;
+ width: 100%;
+ height: 100%;
+ position: absolute;
+ opacity: .8;
+ top: 0;
+ left: 0;
+ transition: .3s ease-in-out;
+ }
