--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,13 +5,14 @@
   font-weight: 900;
   text-align: center;
   margin: 0 0 32px;
+  z-index: 1;
 }
 
-@media screen and  (max-width: 428px) {
-.cover__title {
-  width: 250px;
-  margin: 0 0 16px;
-  font-size: 32px;
-  line-height: 36px;
-  }
+@media screen and (max-width: 767px) {
+  .cover__title {
+    width: 250px;
+    margin: 0 0 16px;
+    font-size: 32px;
+    line-height: 36px;
+    }
 }
