--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,25 +1,10 @@
 .place__image {
-  max-width: 460px;
-  display: block;
+  width: 100%;
+  grid-row: 2/6;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 767px) {
   .place__image {
-      max-width: 440px;
-      max-height: 440px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-.place__image {
-  max-width: 340px;
-  max-height: 340px;
-}
-}
-
-@media screen and (max-width: 320px) {
-  .place__image {
-      max-width: 320px;
-      max-height: 320px;
+      grid-row: auto;
   }
 }
