--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -4,7 +4,6 @@
   line-height: 22px;
   font-weight: 400;
   text-decoration: underline;
-  transition: 1s ease-in-out;
-  cursor: pointer;
+  transition: .2s ease-in-out;
   margin: 0;
 }
