--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,6 +6,11 @@
   grid-column: 2;
   margin: 0 0 25px 0;
 }
+
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
 @media screen and (max-width: 768px) {
   .place__paragraph {
       font-size: 16px;
@@ -14,7 +19,7 @@
   }
 }
 
-@media screen and (max-width: 428px) {
+@media screen and (max-width: 767px) {
   .place__paragraph {
       grid-column: 1;
       margin-left: 24px;
@@ -22,9 +27,15 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .place__paragraph:first-of-type {
+      margin-top: 32px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .place__paragraph {
-      max-width: calc(100% - 32px);
       margin: 0 auto 25px auto;
+      max-width: 90%;
   }
 }
