--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,29 +3,28 @@
   font-size: 72px;
   line-height: 76px;
   font-weight: 900;
-  margin: 8px 0 0 0;
+  margin: 0 0 48px 0;
 }
 
 @media screen and (max-width: 768px) {
   .place__title {
       font-size: 42px;
-      line-height: 1.1;
+      line-height: 46px;
   }
 }
 
-@media screen and (max-width: 428px) {
+@media screen and (max-width: 767px) {
   .place__title {
-      max-width: calc(100% - 48px);
-      margin: 0 auto;
-      align-self: flex-start;
+      margin-left: 24px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .place__title {
-      width: 288px;
-      margin: 0 16px;
       font-size: 32px;
-      line-height: 1.09;
+      line-height: 38px;
+      margin: 0 16px 32px 16px;
   }
 }
+
+
