--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,12 +1,18 @@
 .place__website {
   align-self: end;
-  margin: 0 0 8px 0;
+  margin-bottom: 48px;
 }
+
+@media screen and (max-width: 767px) {
+  .place__website {
+      margin-left: 24px;
+  }
+}
+
 
 @media screen and (max-width: 320px) {
   .place__website {
-      width: 288px;
-      margin: 0 16px;
-      align-self: flex-start;
+      margin: 0 16px 32px 16px;
   }
 }
+
