--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,24 +1,36 @@
 .places {
-  max-width: calc(100% - 296px);
-  margin: 0 auto 92px;
+  max-width: 984px;
+  margin: 0 auto;
+  display: grid;
+  gap: 80px;
+  padding-top: 92px;
+  padding-bottom: 92px;
 }
 
 @media screen and (max-width: 1024px) {
   .places {
-      max-width: calc(100% - 96px);
+      max-width: 90.625%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .places {
-      max-width: calc(100% - 48px);
-      margin: 0 auto 90px;
+      gap: 73px;
+      max-width: 93.75%;
+      padding-top: 88px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places {
+      max-width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .places {
-      max-width: 100%;
-      margin: 0 auto 66px;
+      gap: 50px;
+      padding-bottom: 64px;
+      padding-top: 64px;
   }
 }
