--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 767px) {
   .cover__title {
-    width: 250px;
+    max-width: 250px;
     margin: 0 0 16px;
     font-size: 32px;
     line-height: 36px;
