--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -3,13 +3,9 @@
   padding: 0;
 }
 
-@media screen and (max-width: 320px) {
-  .footer__nav {
-      margin: 0 0 16px;
-  }
-}
+
 @media screen and (max-width: 768px) {
   .footer__nav {
-      margin: 0 0 16px;
+      margin-bottom: 16px;
   }
 }
