Исправлены замечания 1го ревью

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,18 +1,37 @@
 .cover__title {
+  max-width: 560px;
   color: #fff;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 106%;
   font-weight: 900;
   text-align: center;
-  margin: 0 0 32px;
+  margin: 0 auto 32px;
+  padding: 0;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-style: normal;
+  display: flex;
+  position: relative;
   z-index: 1;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 505px) {
   .cover__title {
-    max-width: 250px;
-    margin: 0 0 16px;
-    font-size: 32px;
-    line-height: 36px;
-    }
+    font-size: 12vw;
+  }
 }
+
+@media screen and (max-width: 480px) {
+  .cover__title {
+    max-width: 288px;
+    font-size: 32px;
+    line-height: 109%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__title {
+    margin-top: 33px;
+    margin-bottom: 16px;
+  }
+}
+
