--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,18 +1,18 @@
-.lead {
+.content {
   margin: 0 auto;
   padding: 0;
-  width: calc(100% - 2*148px);
+  max-width: 1280px;
+  min-width: 320px;
 }
 
 @media screen and (max-width: 1024px) {
-  .lead {
-    width: calc(100% - 2*48px);
+  .content {
+    max-width: 1024px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .lead {
-    width: 100%;
+  .content {
+    max-width: 768px;
   }
 }
-
