--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,18 +1,20 @@
 .cover__subtitle {
   max-width: 360px;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-style: normal;
   color: #fff;
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
   z-index: 1;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 480px) {
   .cover__subtitle {
-      width: 100%;
-      font-size: 14px;
-      line-height: 18px;
+    max-width: 288px;
+    font-size: 14px;
   }
 }
