--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,13 @@
 .cover {
-  margin: 0 auto 92px;
-  max-width: 1184px;
+  margin: 0 auto;
+  padding: 0;
+  width: calc(100% - 2*48px);
+  display: flex;
+  flex-direction: column;
 }
 
-
-
+@media screen and (max-width: 1024px) {
+  .cover {
+    width: 100%;
+  }
+}
