--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,6 @@
 .footer__copyright {
   color: #fff;
+  font-family: "Inter", "Arial ", sans-serif;
   font-size: 14px;
   line-height: 16px;
   font-weight: 400;
@@ -8,9 +9,9 @@
   padding: 0;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 480px) {
   .footer__copyright {
-      text-align: left;
       line-height: 14px;
   }
 }
+
