--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,6 +1,6 @@
 .footer__links {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -9,5 +9,6 @@
 @media screen and (max-width: 768px) {
   .footer__links {
       flex-direction: column;
+      margin-bottom: 48px;
 }
 }
