--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,27 +1,26 @@
 .footer {
-  max-width: calc(100% - 96px);
+  margin: 0 auto;
+  padding: 0 0 24px;
+  width: calc(100% - 2*48px);
+  max-width: 1184px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0 auto 24px;
-  padding: 0;
+  box-sizing: border-box;
+  flex-wrap: wrap;
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .footer {
-    max-width: calc(100% - 48px);
+    width: calc(100% - 2*24px);
   }
 }
 
-@media screen and (max-width: 428px) {
+@media screen and (max-width: 480px) {
   .footer {
+    width: 100%;
     flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .footer {
-    max-width: calc(100% - 134px);
-    margin: 0 124px 18px 16px;
+    align-items: flex-start;
+    padding-left: 16px;
   }
 }
