--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,13 +1,18 @@
 .header__lang-link {
-  color: #fff;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-style: normal;
   font-size: 24px;
   line-height: 28px;
-  font-weight: 400;
+  text-align: right;
+  color: #FFFFFF;
   text-decoration: none;
-  padding-left: 18px;
+  transition: 0.3s ease-in;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .header__lang-link {
       font-size: 18px;
       line-height: 20px;
