--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,6 +1,14 @@
 .header__lang {
-  margin: 18px 0 0 auto;
+  margin: 20px 0 0;
   padding: 0;
   list-style: none;
   display: flex;
+  flex-direction: row;
 }
+
+@media screen and (max-width: 480px) {
+  .header__lang {
+    margin-top: 14px;
+  }
+}
+
