--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,13 +1,12 @@
 .header__logo {
-  width: 176px;
-  height: 52px;
-  display: block;
+  margin: 0;
+  padding: 0;
+  max-width: 176px;
+  height: auto;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .header__logo {
-      margin: 16px 0 0;
-      width: 142px;
-      height: 42px;
+    max-width: 142px;
   }
 }
