--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,22 +1,28 @@
 .header {
-  margin: 28px auto 64px;
-  max-width: calc(100% - 96px);
+  margin: 0 auto;
+  padding: 0;
+  max-width: 1184px;
+  width: calc(100% - 96px);
   display: flex;
-  align-items: flex-start;
-  justify-content: start;
-  box-sizing: content-box;
+  flex-direction: row;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    max-width: 928px;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .header {
-      max-width: calc(100% - 48px);
-      margin: 0 auto 56px;
+    width: calc(100% - 48px);
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .header {
-      max-width: calc(100% - 32px);
-      margin: 0 auto 48px;
+    width: calc(100% - 32px);
   }
 }
