--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,8 +1,5 @@
 .intro__list-item {
-  color: #fff;
-  font-size: 12px;
-  line-height: 18px;
-  font-weight: 700;
   margin: 0;
-
+  padding: 0;
+  display: flex;
 }
