--- a/blocks/intro/__list-quantity/intro__list-quantity.css
+++ b/blocks/intro/__list-quantity/intro__list-quantity.css
@@ -1,3 +1,6 @@
 .intro__list-quantity {
-  font-weight: normal;
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-weight: 400;
 }
