--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,4 +2,9 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 18px;
 }
