--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,14 +1,22 @@
 .intro__text {
-  color: #fff;
-  font-size: 16px;
-  line-height: 26px;
+  margin: 0 0 38px 0;
+  padding: 0;
+  font-family: "Inter", "Arial ", sans-serif;
   font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 163%;
   max-width: 690px;
-  margin: 0 0 33px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1024px) {
   .intro__text {
-      margin: 0 0 34px;
+    margin-bottom: 28px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .intro__text {
+    margin-bottom: 34px;
   }
 }
