--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,14 +1,23 @@
 .intro__title {
-  color: #fff;
-  font-size: 54px;
-  line-height: 58px;
+  margin: 0 0 43px 0;
+  padding: 0;
+  font-family: "Inter", "Arial ", sans-serif;
   font-weight: 900;
-  margin: 0 0 40px;
+  font-style: normal;
+  font-size: 54px;
+  line-height: 107%;
+  display: flex;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1024px) {
   .intro__title {
-      font-size: 32px;
-      line-height: 1.09;
+    margin-bottom: 41px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
   }
 }
