--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,25 +1,23 @@
 .intro {
-  margin: 0 auto 92px;
-  max-width: 984px;
+  margin: 0 auto;
+  width: calc(100% - 2*148px);
 }
 
 @media screen and (max-width: 1024px) {
   .intro {
-      max-width: calc(100% - 334px);
-      margin: 0 0 92px 48px;
+    width: calc(100% - 2*48px);
   }
 }
 
 @media screen and (max-width: 768px) {
   .intro {
-      max-width: calc(100% - 48px);
-      margin: 0 auto 88px;
+    width: calc(100% - 2*24px);
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .intro {
-      max-width: calc(100% - 32px);
-      margin: 0 auto 64px;
+    width: calc(100% - 2*16px);
   }
 }
+
