--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,20 +1,21 @@
 .lead__caption {
-  color: #fff;
+  margin: 5px 0 0;
+  padding: 0;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-weight: normal;
   font-size: 10px;
   line-height: 14px;
-  font-weight: 400;
+  letter-spacing: 1.5px;
   text-transform: uppercase;
-  margin-top: 8px;
-  letter-spacing: 0.15em;
 }
 
 @media screen and (max-width: 768px) {
   .lead__caption {
-      margin: 0 0 0 24px;
+    margin-left: 24px;
   }
 }
 @media screen and (max-width: 320px) {
   .lead__caption {
-      margin: 0 0 0 16px;
+    margin-left: 16px;
   }
 }
