--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,7 +1,9 @@
 .lead__image {
-  margin: 0 0 8px 0;
-  display: block;
-  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: auto;
 }
+
 
 
