--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,30 +1,28 @@
 .lead__subtitle {
-  color: #fff;
-  max-width: 600px;
-  font-size: 30px;
-  line-height: 36px;
-  font-weight: 400;
   margin: 0 auto 64px;
+  padding: 0;
+  max-width: 640px;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 30px;
+  line-height: 120%;
   text-align: center;
+  display: flex;
 }
+
 @media screen and (max-width: 1024px) {
   .lead__subtitle {
-      margin-bottom: 56px;
+    margin-bottom: 56px;
   }
 }
 
-@media screen and (max-width: 767px) {
-  .lead__subtitle {
-      font-size: 5vw;
-      line-height: 1.2;
-      max-width: 90%;
-  }
-}
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .lead__subtitle {
-  font-size: 16px;
-  line-height: 20px;
-  margin-bottom: 40px;
+    max-width: 288px;
+    font-size: 16px;
+    line-height: 125%;
+    margin-bottom: 40px;
   }
 }
