--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,25 +1,33 @@
 .lead__title {
-  color: #fff;
+  margin: 0 auto 35px;
+  padding: 0;
+  display: flex;
   max-width: 720px;
-  font-size: 96px;
-  line-height: 100px;
+  font-family: "Inter", "Arial ", sans-serif;
   font-weight: 900;
-  margin: 0 auto 32px;
+  font-style: normal;
+  font-size: 96px;
+  line-height: 104%;
   text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .lead__title {
-      font-size: 12vw;
-      line-height: 1.15;
-      max-width: 90%;
+  margin-bottom: 32px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 675px) {
   .lead__title {
-      font-size: 40px;
-      line-height: 44px;
-      margin-bottom: 16px;
+    font-size: 12vw;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 110%;
+    margin-bottom: 16px;
   }
 }
