--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
-  max-width: 1280px;
   background-color: #2A2C2F;
   margin: 0 auto;
+  padding: 0;
   color: #fff;
   font-family: "Inter", sans-serif;
   text-rendering: optimizeLegibility;
@@ -12,20 +12,3 @@
   -moz-text-size-adjust: 100%;
 }
 
-@media screen and (max-width: 1024px) {
-  .page {
-      max-width: 1024px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .page {
-      max-width: 768px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .page {
-      max-width: 320px;
-  }
-}
