--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,35 +1,25 @@
 .photo-grid {
-  margin: 0 48px 92px;
-  max-width: calc(100% - 48px*2);
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  gap: 16px;
+  margin: 0 auto;
+  padding: 0;
+  max-width: 1184px;
+  width: calc(100% - 2*48px);
 }
 
-@media screen and (max-width: 1024px) {
-  .photo-grid {
-      grid-template-rows: repeat(4, 1fr);
-      grid-template-columns: repeat(3, 1fr);
-      gap: 14px 14px;
+  @media screen and (max-width: 1024px) {
+    .photo-grid {
+      max-width: 928px;
       }
   }
 
   @media screen and (max-width: 768px) {
-      .photo-grid {
-          margin: 0 48px 88px;
-          max-width: calc(100% - 48px);
-          grid-template-rows: repeat(6, 1fr);
-          grid-template-columns: repeat(2, 1fr);
-          gap: 16px 16px;
-      }
+    .photo-grid {
+      max-width: 720px;
+      width: calc(100% - 2*24px);
+    }
   }
 
-  @media screen and (max-width: 320px) {
-      .photo-grid {
-          margin: 0 auto 64px;
-          max-width: calc(100% - 32px);
-          grid-template-rows: repeat(12, 1fr);
-          grid-template-columns: repeat(1, 1fr);
-          row-gap: 12px;
-      }
+  @media screen and (max-width: 480px) {
+    .photo-grid {
+      width: calc(100% - 2*16px);
+    }
   }
