--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,10 +1,26 @@
 .place__image {
-  width: 100%;
-  grid-row: 2/6;
+  margin: 0;
+  padding: 0;
+  max-width: 480px;
+  height: auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1024px) {
   .place__image {
-      grid-row: auto;
+    width: 42.96875vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__image {
+    width: 44.2708333vw;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .place__image {
+    width: 100vw;
+    margin-bottom: 32px;
+    object-fit: cover;
   }
 }
