--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,13 +1,16 @@
 .place__link {
-  color: #fff;
-  font-size: 18px;
-  line-height: 22px;
-  font-weight: 400;
-  text-decoration: underline;
-  transition: .2s ease-in-out;
   margin: 0;
+  padding: 0;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 122%;
+  color: #fff;
+  transition: 0.3s ease-in;
 }
 
 .place__link:hover {
   opacity: .8;
 }
+
