--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,30 +1,38 @@
 .place__title {
-  color: #fff;
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-weight: 900;
+  font-style: normal;
   font-size: 72px;
   line-height: 76px;
-  font-weight: 900;
-  margin: 0 0 48px 0;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 768px) {
   .place__title {
-      font-size: 42px;
-      line-height: 46px;
+    font-size: 42px;
+    line-height: 46px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 500px) {
   .place__title {
-      margin-left: 24px;
+    font-size: 8vw;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .place__title {
-      font-size: 32px;
-      line-height: 38px;
-      margin: 0 16px 32px 16px;
+    margin: 0 auto 33px;
+    width: calc(100% - 2*16px);
+    font-size: 32px;
+    line-height: 35px;
   }
 }
+
+
+
 
 
