--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,9 +1,11 @@
 .place__url-heading {
-  color: #aaaaaa;
+  margin: 0 0 12px 0;
+  padding: 0;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-style: normal;
+  font-weight: normal;
   font-size: 12px;
   line-height: 12px;
-  font-weight: 400;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
-  margin: 0 0 12px 0;
+  letter-spacing: 2px;
+  color: #AAAAAA;
 }
