--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,18 +1,14 @@
 .place__website {
-  align-self: end;
-  margin-bottom: 48px;
+  margin: 0;
+  padding: 0;
+  align-self: flex-end;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 480px) {
   .place__website {
-      margin-left: 24px;
+    margin: 0 auto 32px;
+    width: calc(100% - 2*16px);
   }
 }
 
-
-@media screen and (max-width: 320px) {
-  .place__website {
-      margin: 0 16px 32px 16px;
-  }
-}
 
