--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,29 +1,47 @@
 .place {
+  margin: 0;
+  padding: 0;
   display: grid;
-  grid-template-columns: 460px 1fr;
-  grid-column-gap: 40px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  column-gap: 17px;
+  row-gap: 50px;
 }
 
+/* 1024 */
 @media screen and (max-width: 1024px) {
   .place {
-      grid-template-columns: 440px 1fr;
-      grid-column-gap: 32px;
+    column-gap: 32px;
   }
 }
 
+/* 768 */
 @media screen and (max-width: 768px) {
   .place {
-      grid-template-columns: 340px 1fr;
-      grid-column-gap: 28px;
+    column-gap: 16px;
+    row-gap: 45px;
   }
 }
 
-@media screen and (max-width: 767px) {
-.place {
-    grid-template-columns: 1fr;
+/* 568 */
+@media screen and (max-width: 568px) {
+  .place {
+    column-gap: 12px;
+  }
 }
+
+/* 500 */
+@media screen and (max-width: 500px) {
+  .place {
+    column-gap: 8px;
+  }
 }
 
-
-
-
+@media screen and (max-width: 480px) {
+  .place {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    row-gap: 0;
+  }
+}
