--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,36 +1,35 @@
 .places {
-  max-width: 984px;
   margin: 0 auto;
-  display: grid;
-  gap: 80px;
-  padding-top: 92px;
-  padding-bottom: 92px;
+  padding: 0;
+  width: calc(100% - 2*148px);
 }
 
 @media screen and (max-width: 1024px) {
   .places {
-      max-width: 90.625%;
+    width: calc(100% - 2*48px);
   }
 }
 
 @media screen and (max-width: 768px) {
   .places {
-      gap: 73px;
-      max-width: 93.75%;
-      padding-top: 88px;
+    width: calc(100% - 48px);
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 568px) {
   .places {
-      max-width: 100%;
+    width: calc(100% - 32px);
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
   .places {
-      gap: 50px;
-      padding-bottom: 64px;
-      padding-top: 64px;
+    width: calc(100% - 16px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .places {
+    width: 100%;
   }
 }
